2008-06-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs: When handling the Delete
	  command, run DeleteItem for only one command handle, since the node
	  will probably be gone after that method is called. Should fix Bug
	  396566 - Deleting items in the solution pad often segfaults.

2008-06-05  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs.in,
	  MonoDevelop.Ide.Gui.Dialogs/SharpDevelopAboutPanels.cs,
	  MonoDevelop.Ide.Gui.Dialogs/SplashScreen.cs: Show version label in
	  the splash and in the about box. Version label is the friendly name
	  of the package version.

2008-06-05  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/EncapsulateFieldDialog.cs: Left-align the
	'read-only' column.

2008-06-05  Ankit Jain  <jankit@novell.com>

	* EncapsulateFieldDialog.cs (OnOKClicked): Fix order of arguments.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/CombineNodeBuilder.cs: Added
	  local handling of FindInFile command.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Add missing dependency.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Bump MD version.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Commands/FileCommands.cs: Use destroy to dispose the
	  dialog.

2008-06-04  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs
	(BuildRefactoryMenuForItem): Add a "Encapsulate fields" command to the Class
	menu.
	(EncapsulateField): Handle invokation from class menu also.
	* MonoDevelop.Ide.Gui.Dialogs/EncapsulateFieldDialog.cs: Show a list of
	all fields and allow generating properties for multiple fields.
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs: Update.
	* gtk-gui/gui.stetic: Update.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/SplashScreen.cs,